# WindowsMediaSDK

./: CMakeLists.txt  build_for_win.bat
example/rtmp_push_demo/: CMakeLists.txt  main.cpp  main_window.cc  main_window.h  minidump.cc  minidump.h  my_window.cc  my_window.h  video_device_choose_window.cc  video_device_choose_window.h
example/rtmp_push_demo/xml/: main_window.xml  video_device_window.xml
mediasdk/: CMakeLists.txt
mediasdk/audio_capture/capture/: audio_capture.cc  audio_capture.h
mediasdk/camera_capture/video/: video_capture_proxy.cc
mediasdk/camera_capture/video/mf/: video_device_mf.cc
mediasdk/local_log/: log_writer.cc
mediasdk/rtmp/: EasyRTMPAPI.h  EasyStreamClientAPI.h  EasyTypes.h  easyrtmp_api.cc
mediasdk/rtmp/librtmp/: netstackdump.c  rtmp.c  rtmp_sys.h
mediasdk/video_encoder/: video_encoder_factory.cc
mediasdk/video_encoder/openh264/: video_encoder_openh264.cc  video_encoder_openh264.h
mediasdk/video_encoder/qsv/: video_encoder_qsv.cc
mediasdk/video_encoder/x264/: video_encoder_x264.cc
mediasdk/video_render/opengl/: video_render_opengl.cc  video_render_opengl.h
